<resources>
    <string name="app_name">Calculatrice</string>
    <string name="boutonCalculer">Calculer</string>
    <string name="boutonDernierCalcule">Dernier Calcule</string>
    <string name="_0" translatable="false">0</string>
    <string name="Division" translatable="false">/</string>
    <string name="multiplication" translatable="false">*</string>
    <string name="addition" translatable="false">+</string>
    <string name="soustraction" translatable="false">-</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="calculer">Calculer</string>
    <string name="nettoyer">Nettoyer</string>
    <string name="ValeurTropGrande">Valeur trop grande</string>
    <string name="CalculIncomplet">Calcul Incomplet</string>
    <string name="DivisionParZeroErr">Division par zéro</string>
</resources>